--- a/static/index.html
+++ b/static/index.html
@@ -251,6 +251,7 @@ function update() {
 
 function wsSetup() {
     var url = "ws://"+host+"/subscribe";   
+    //var url = "ws://127.0.0.1:5000/subscribe/"
     socket = new WebSocket(url);
     socket.onopen = function() {
         //XXX: TODO What are you going to do here?
@@ -260,8 +261,11 @@ function wsSetup() {
     };
     socket.onmessage = function(msg) {  
         try {
+            console.log("Got here instead");
             debug("WebSocket Recv:" + msg.data);
-            //XXX: TODO What are you going to do here?            
+            //XXX: TODO What are you going to do here?
+            socket.send(JSON.stringify(msg))  
+
         } catch (e) {
             alert("socket on message: " + e);
         }
