--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,14 @@
     <script src="json2.js"></script>
   </head> 
   <body bgcolor="white" height="100%" width="100%"> 
+    <style>
+        body {
+            background-image: url(mod.jpeg);
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+    </style>
     <div id="debug"></div>
     <canvas id="c" width="100%" height="100%" style="-webkit-tap-highlight-color: transparent;"></canvas> 
 
@@ -55,7 +63,8 @@ function drawCircle(context,entity) {
         fillStyle = entity["colour"];
         strokeStyle = fillStyle;
         arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
-        stroke();                                
+        stroke();    
+        fill();                            
     }
 }
 
@@ -64,16 +73,16 @@ function prepEntity(entity) {
         entity["colour"] = "#FF0000";
     }
     if (!entity["radius"]) {
-        entity["radius"] = 50;
+        entity["radius"] = 10;
     }
     return entity;
 }
 
 function clearFrame() {
     with(context) {
-	moveTo(0,0);
-	fillStyle = "#000";
-	fillRect(0,0,W,H);
+    	moveTo(0,0);
+    	//fillStyle = "#000";
+    	//fillRect(0,0,W,H);
     }
 
 }
@@ -125,6 +134,10 @@ function addEntity(entity, data) {
     world[entity] = data;
     drawNextFrame(); // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just modified!
+    packet = {};
+    packet[entity] = data;
+    socket.send(JSON.stringify(packet));
+    
 }
 var counter = 0;
 function addEntityWithoutName(data) {
@@ -231,15 +244,15 @@ mouse = (function() {
 // Add the application specific mouse listeners!
 //XXX: TODO Make these prettier!
 mouse.mousedowners.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'blue'});
+    addEntityWithoutName({'x':x,'y':y,'colour':'#2e79de'});
 });
 
 mouse.mouseuppers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'red'});
+    addEntityWithoutName({'x':x,'y':y,'colour':'#2e79de'});
 });
 
 mouse.mousedraggers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'green',
+    addEntityWithoutName({'x':x,'y':y,'colour':'#2e79de',
                           'radius':10});
 });
 
@@ -261,11 +274,15 @@ function wsSetup() {
     };
     socket.onmessage = function(msg) {  
         try {
-            console.log("Got here instead");
             debug("WebSocket Recv:" + msg.data);
             //XXX: TODO What are you going to do here?
-            socket.send(JSON.stringify(msg))  
-
+            var data = JSON.parse(msg.data);
+            for (var key in data) {
+                if (world[key] != data[key]) {
+                    world[key] = data[key];
+                    drawNextFrame();
+                }
+            }
         } catch (e) {
             alert("socket on message: " + e);
         }
